<resources>
    <string name="app_name">DMZJThird</string>

    // 评论请求
    // %1d: 2: 专题; 4: 漫画
    // %2d: obj_id
    // %3s: 1: 最新评论; 2: 最热评论
    // %4d: 页码
    <string name="comment_request">https://nnv3api.muwai.com/comment2/%1$d/%2$d/%3$s/3/%4$d.json"</string>

    <string name="public_comment">https://nnv3comment.muwai.com/v1/%1d/new/add/app?
        obj_id=%2$s&amp;
        content=%3$s&amp;
        uid=%4$s&amp;
        dmzj_token=%5$s&amp;
        to_uid=%6$s&amp;
        to_comment_id=%7$s&amp;
        sender_terminal=1</string>


    // 数据出错处理
    <string name="no_data">没有数据</string>
    <string name="default_text">默认文字</string>
    <string name="copyright_error">因版权、国家法规等原因，此漫画暂不提供观看，敬请谅解。</string>


    // 主题颜色名称
    <string name="theme_dialog_title">切换主题</string>
    <string name="theme_blue">胖次蓝</string>
    <string name="theme_pink">少女粉</string>
    <string name="theme_green">早苗绿</string>
    <string name="theme_purple">基佬紫</string>
    <string name="theme_red">姨妈红</string>
    <string name="theme_yellow">咸蛋黄</string>

    // nav_bottom_icon名称
    <string name="icon_comic_title">漫画</string>
    <string name="icon_topic_title">专题</string>
    <string name="icon_novel_title">轻小说</string>
    <string name="icon_account_title">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //account条目文字
    <string name="icon_favorite_title">我的订阅</string>
    <string name="icon_history_title">浏览历史</string>
    <string name="icon_message_title">我的评论</string>
    <string name="icon_download_title">我的下载</string>
    <string name="icon_exit_title">退出登录</string>
    <string name="icon_setting_title">设置</string>
    <string name="icon_theme_title">主题切换</string>
    <string name="icon_change_password">修改密码</string>
    <string name="icon_comic_setting_title">漫画阅读设置</string>
    <string name="icon_novel_setting_title">小说阅读设置</string>
    <string name="icon_comic_download_title">漫画下载设置</string>
    <string name="icon_novel_download_title">小说下载设置</string>
    <string name="icon_update_title">检查更新</string>
    <string name="icon_about_title">关于</string>


    // 夜间模式选项


    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="save">保存</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="icon_login_title">点击登录</string>
    <string name="icon_register_title">点击注册</string>

    // 漫画阅读设置item文字
    <string name="use_system_light">使用系统亮度</string>
    <string name="vertical_reading">竖直阅读</string>
    <string name="japanese_comic_mode">日漫模式</string>
    <string name="keep_screen_light">屏幕常亮</string>
    <string name="fullscreen_reading">全屏阅读</string>
    <string name="status_information">显示状态信息</string>

    // TabLayout文字
    <string name="recommend">推荐</string>
    <string name="update">更新</string>
    <string name="classify">分类</string>
    <string name="rank">排行</string>
    <string name="topic">专题</string>

    // 订阅提示文字
    <string name="subscribe_success">订阅成功</string>
    <string name="subscribe_fail">订阅失败</string>
    <string name="cancel_subscribe_success">取消订阅成功</string>
    <string name="cancel_subscribe_fail">取消订阅失败</string>
    <string name="not_login">请先登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    // View文字
    <string name="subscribe">订阅</string>
    <string name="complaint">吐槽(%d)</string>
    <string name="chapter">章节</string>
    <string name="catalog">目录(%d)</string>
    <string name="pre_chapter">上一话</string>
    <string name="next_chapter">下一话</string>

    // Comment文字
    <string name="comment_amount">漫画评论(%d)</string>
    <string name="latest_comment">最新评论</string>
    <string name="hottest_comment">最热评论</string>
    <string name="like_amount">点赞(%d)</string>
    <string name="fold_comment_count">点击展开%d条评论</string>

    // UserInfo文字
    <string name="comic_subscribed">漫画订阅</string>
    <string name="comic_comment">漫画评论</string>
    <string name="novel_subscribed">小说订阅</string>
    <string name="novel_comment">小说评论</string>

    // ReplyComment文字
    <string name="toolbar_public_comment">发表评论</string>
    <string name="length_counter">%d/1000</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    // ObjectInfo文字
    <string name="object_info_author">作者:%s</string>
    <string name="object_info_hit_count">点击:%d</string>
    <string name="object_info_subscribe_count">订阅:%d</string>
    <string name="object_info_status">状态:%s</string>
    <string name="object_info_last_update_time">最后更新:%s</string>


</resources>