<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/view_top_bottom_color"
    android:paddingStart="@dimen/dp_10"
    android:paddingTop="20dp"
    android:paddingEnd="@dimen/dp_10"
    android:paddingBottom="@dimen/dp_10">

    <TextView
        android:id="@+id/preChapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre_chapter"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxHeight="7dp"
        android:minHeight="7dp"
        android:progressDrawable="@drawable/bg_seekbar"
        android:thumb="@drawable/select_thumb_bar"
        app:layout_constraintEnd_toStartOf="@id/nextChapter"
        app:layout_constraintStart_toEndOf="@id/preChapter"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nextChapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_chapter"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekBar">

        <LinearLayout
            android:id="@+id/subscribeLayout"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:background="?selectableItemBackground"
            android:padding="@dimen/dp_10"
            android:gravity="center">

            <ImageView
                android:id="@+id/subscribeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_subscribe" />

            <TextView
                android:id="@+id/subscribeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/subscribe"
                android:textColor="@color/white" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/settingLayout"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:background="?selectableItemBackground"
            android:padding="@dimen/dp_10"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_setting_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/icon_setting_title"
                android:textColor="@color/white" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/chapterListLayout"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:background="?selectableItemBackground"
            android:padding="@dimen/dp_10"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_chapter_list" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/chapter"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>