<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg">


    <FrameLayout
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomView"/>

    <LinearLayout
        android:id="@+id/bottomView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentView">

        <LinearLayout
            android:id="@+id/comicLayout"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:padding="@dimen/dp_10"
            android:background="?selectableItemBackground"
            android:gravity="center">

            <ImageView
                android:id="@+id/comicIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_comic" />

            <TextView
                android:id="@+id/comicTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_comic_title" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/topicLayout"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:padding="@dimen/dp_10"
            android:background="?selectableItemBackground">

            <ImageView
                android:id="@+id/topicIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_topic" />

            <TextView
                android:id="@+id/topicTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_topic_title" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/novelLayout"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="center"
            android:clickable="true"
            android:background="?selectableItemBackground">

            <ImageView
                android:id="@+id/novelIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_novel" />

            <TextView
                android:id="@+id/novelTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_novel_title" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/accountLayout"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:padding="@dimen/dp_10"
            android:background="?selectableItemBackground">

            <ImageView
                android:id="@+id/accountIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_account" />

            <TextView
                android:id="@+id/accountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_account_title" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>